
Development Portal (2015-03-19 shi)
==============================
Hide currency and year dropdown when viewing SAVi


Development Portal (2015-03-16 shi)
==============================
Minor css changes high / original dropdown
Removed inline style in year select dropdown


Development Portal (2015-03-13 shi)
==============================
Minor css changes high / original SAVi


Development Portal (2015-03-04 shi)
==============================
Minor css changes high / original


Development Portal (2015-03-03 shi)
==============================
Changed word wrap for donor names in money table
Added more descriptions for how data is calculated
Footer translations added
Added attribution link to all footers
Attribution link translations added


Development Portal (2015-02-27 shi)
==============================
Fixed footer wording


Development Portal (2015-02-26 shi)
==============================
Fixed table header budget list


Development Portal (2015-02-02 shi)
==============================
Fixed currency typo


Development Portal (2015-01-30 shi)
==============================
Changed remaining "Transactions" to "Spend"
Background-image fix
New Currency exchange
Changed "High Visibility" to "Print-Friendly"
Fix chart widths
Fix chart legibility and overall layout


Development Portal (2014-11-30 shi)
==============================
Added link to generator examples news post
Fixed header for list transactions


Development Portal (2014-11-28 shi)
==============================
Fix generator widths consistency in iframes
Added new instructions to generator
Edited CSS for news posts


Development Portal (2014-11-27 shi)
==============================
Changed table links to all transactions
Edited CSS for rgba styles
Fixed transparency for generator


Development Portal (2014-11-23 shi)
==============================
Changed CSS, layout and text for generator
Reordered options for dropdown
Added arrows for dropdown multi-select