@@ -91,12 +91,12 @@ a.back_news:hover	{color:#000;}
 	============================================= */
 #donor_graph, #sector_graph, #publisher_countries_graph,
 #publisher_sectors_graph{background-color:#FFF; font-size:1.0em; line-height:1.3em; color:#000; border:1px solid #000; border-top:0;}
-a.ask					{background-color:#000; display:block; width:880px; margin:0 auto; padding:20px 40px; color:#FFF; font-size:1.8em; text-align:center;}
-a.ask:hover				{background-color:#000; color:#FFF;}
-.main_peak_wrap			{width:958px; background-color:#FFF; border:1px solid #000; border-top:0; border-bottom:0;}
-.peak					{margin:0 auto; width:0; height:0; border-left:20px solid transparent; border-right:20px solid transparent; border-top:20px solid #000;}	/* Triangles */
+a.ask					{background-color:#000; display:block; width:960px; margin:0 auto; padding:0; color:#FFF; font-size:1.8em; text-align:center;}
+.main_peak_wrap			{width:958px; background-color:#FFF; border:1px solid #000; border-top:0; border-bottom:0; display:block;}
+.peak					{margin:0 auto; width:0; height:0; border-left:20px solid transparent; border-right:20px solid transparent; border-top:20px solid #000; display:block;}	/* Triangles */
 a.view_all_money		{display:block; width:958px; background-color:#FFF; color:#000; border-radius:0 0 8px 8px; text-align:center; margin:0 auto; padding:15px 0; font-size:1.1em; border:1px solid #000; border-top:0;}
 a.view_all_money:hover	{background-color:#000; color:#FFF;}
+.ask_title				{padding:20px 40px; display:block; color:#fff;}
 
 
 /*	Map styles
