@@ -1,3 +1,7 @@
+Development Portal (2015-03-20 shi)
+==============================
+Fixed peak hover color for Original theme
+
 
 Development Portal (2015-03-19 shi)
 ==============================
